Fix awkward spacing on big profile stats

--- a/public/style.css
+++ b/public/style.css
@@ -223,7 +223,7 @@ table {
 }
 
 .bigstats {
-  flex: 0 0 23%;
+  width: calc(100% - 150px);
   padding-top: 70px;
   color: white;
 }
